--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -1,20 +1,21 @@
 // 1. Include functions first (so you can manipulate colors, SVGs, calc, etc)
 @import "bootstrap/scss/functions";
 
-// // 2. Include any default variable overrides here
+// 2. Include any default variable overrides here
 $primary: #579DDB;
+$enable-rounded: false;
 
-// // 3. Include remainder of required Bootstrap stylesheets
+// 3. Include remainder of required Bootstrap stylesheets
 @import "bootstrap/scss/variables";
 
-// // 4. Include any default map overrides here
+// 4. Include any default map overrides here
 
-// // 5. Include remainder of required parts
+// 5. Include remainder of required parts
 @import "bootstrap/scss/maps";
 @import "bootstrap/scss/mixins";
 @import "bootstrap/scss/root";
 
-// // 6. Include any needed components here
+// 6. Include any needed components here
 @import "bootstrap/scss/_buttons";
 @import "bootstrap/scss/_forms";
 @import "bootstrap/scss/_list-group";
@@ -22,3 +23,4 @@ $primary: #579DDB;
 @import "bootstrap/scss/_modal";
 @import "bootstrap/scss/_nav";
 @import "bootstrap/scss/_close";
+@import "bootstrap/scss/_alert";
