--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -1,9 +1,15 @@
 // 1. Include functions first (so you can manipulate colors, SVGs, calc, etc)
 @import "bootstrap/scss/functions";
 
+html, body {
+  font-size: 12px;
+}
+
 // 2. Include any default variable overrides here
 $primary: #579DDB;
 $enable-rounded: false;
+$font-size-base: 1.2rem;
+$app-input-min-height: 35px;
 
 // 3. Include remainder of required Bootstrap stylesheets
 @import "bootstrap/scss/variables";
