--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -8,6 +8,7 @@ html, body {
 // 2. Include any default variable overrides here
 $primary: #579DDB;
 $enable-rounded: false;
+$enable-grid-classes: false;
 $font-size-base: 1.2rem;
 $app-input-min-height: 35px;
 
