feat: introduce scss var `$app-soft-bg`

--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -21,6 +21,7 @@ $link-color: #555;
 // Custom variables.
 $app-input-min-height: 37px;
 $app-btn-border-color: #dbdbdb;
+$app-soft-bg: #f9f9f9;
 
 // ---------------------------------------------------------- //
 // 3. Include remainder of required Bootstrap stylesheets
