feat(pager): improve UI/UX

--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -17,6 +17,7 @@ $enable-grid-classes: false;
 $primary: #579DDB;
 $font-size-base: 1.2rem;
 $link-color: #555;
+$body-color: #5f5f5f;
 
 // Custom variables.
 $app-input-min-height: 37px;
