--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -1,49 +1,9 @@
-// 1. Include functions first (so you can manipulate colors, SVGs, calc, etc)
-@import "bootstrap/scss/functions";
-
-html,
-body {
-  font-size: 12px;
-}
-
-// ---------------------------------------------------------- //
-// 2. Include any default variable overrides here
-// ---------------------------------------------------------- //
-// Options.
-$enable-rounded: false;
-$enable-grid-classes: false;
-
-// Adjust BS vars.
-$primary: #579DDB;
-$font-size-base: 1.2rem;
-$link-color: #555;
-$body-color: #5f5f5f;
-
-// Custom variables.
-$app-input-min-height: 37px;
-$app-btn-border-color: #dbdbdb;
-$app-soft-bg: #f9f9f9;
-
-// ---------------------------------------------------------- //
-// 3. Include remainder of required Bootstrap stylesheets
-// ---------------------------------------------------------- //
-@import "bootstrap/scss/variables";
-@import "bootstrap/scss/variables-dark";
-
-// ---------------------------------------------------------- //
-// 4. Include any default map overrides here
-// ---------------------------------------------------------- //
-
-// ---------------------------------------------------------- //
-// 5. Include remainder of required parts
-// ---------------------------------------------------------- //
-@import "bootstrap/scss/maps";
-@import "bootstrap/scss/mixins";
-@import "bootstrap/scss/root";
+@import "styles.variables.scss";
 
 // ---------------------------------------------------------- //
 // 6. Include any needed components here
 // ---------------------------------------------------------- //
+@import "bootstrap/scss/_root";
 @import "bootstrap/scss/_buttons";
 @import "bootstrap/scss/_forms";
 @import "bootstrap/scss/_list-group";
@@ -52,3 +12,5 @@ $app-soft-bg: #f9f9f9;
 @import "bootstrap/scss/_nav";
 @import "bootstrap/scss/_close";
 @import "bootstrap/scss/_alert";
+@import "bootstrap/scss/_badge";
+@import "bootstrap/scss/_helpers";
