--- a/src/scss/styles.variables.scss
+++ b/src/scss/styles.variables.scss
@@ -14,10 +14,12 @@ $enable-rounded: false;
 $enable-grid-classes: false;
 
 // Adjust BS vars.
+$min-contrast-ratio: 2.5;
 $primary: #579DDB;
-$font-size-base: 1.2rem;
-$link-color: #555;
 $body-color: #5f5f5f;
+$link-color: #555;
+$font-size-base: 1.2rem;
+$input-btn-font-size: 1rem;
 
 // Custom variables.
 $app-input-min-height: 37px;
