--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -11,4 +11,5 @@
 @import "bootstrap/scss/_nav";
 @import "bootstrap/scss/_close";
 @import "bootstrap/scss/_alert";
+@import "bootstrap/scss/_badge";
 @import "bootstrap/scss/_helpers";
