feat: include bootstrap utilities

--- a/src/lib/scss/styles.scss
+++ b/src/lib/scss/styles.scss
@@ -13,3 +13,4 @@
 @import "bootstrap/scss/_alert";
 @import "bootstrap/scss/_badge";
 @import "bootstrap/scss/_helpers";
+@import "bootstrap/scss/utilities/_api";
