--- a/src/lib/scss/styles.scss
+++ b/src/lib/scss/styles.scss
@@ -14,3 +14,7 @@
 @import "bootstrap/scss/_badge";
 @import "bootstrap/scss/_helpers";
 @import "bootstrap/scss/utilities/_api";
+
+.height-100 {
+    height: 100%;
+}
