feat: enable rounded corners

--- a/src/lib/scss/styles.variables.scss
+++ b/src/lib/scss/styles.variables.scss
@@ -12,7 +12,7 @@ body {
 // 2. Include any default variable overrides here
 // ---------------------------------------------------------- //
 // Options.
-$enable-rounded: false;
+$enable-rounded: true;
 $enable-grid-classes: false;
 
 // Adjust BS vars.
