--- a/src/lib/scss/styles.scss
+++ b/src/lib/scss/styles.scss
@@ -22,3 +22,14 @@
 .height-100 {
     height: 100%;
 }
+
+.btn-link {
+    outline: none;
+    text-decoration: none;
+    border: none;
+    box-shadow: none;
+
+    &:active {
+        box-shadow: none !important;
+    }
+}
