--- a/src/lib/scss/styles.scss
+++ b/src/lib/scss/styles.scss
@@ -34,6 +34,20 @@
     }
 }
 
+.btn-text {
+    background: none;
+    border: none;
+    padding: 0;
+    margin: 0;
+    outline: none;
+    box-shadow: none;
+    text-decoration: none;
+
+    &:active {
+        box-shadow: none !important;
+    }
+}
+
 /* Every item inside `panels` will be styled as a panel. This class can be applied to a flexbox or a grid. */
 .panels {
     gap: 25px;
