feat(money): better styling for components

--- a/src/lib/scss/styles.scss
+++ b/src/lib/scss/styles.scss
@@ -19,7 +19,7 @@
 @import "bootstrap/scss/_helpers";
 @import "bootstrap/scss/utilities/_api";
 
-:root() {
+:root {
     --uimf-btn-bg: #fafafa;
 }
 
