--- a/src/lib/scss/styles.scss
+++ b/src/lib/scss/styles.scss
@@ -5,6 +5,7 @@
 
 @import "bootstrap/scss/_root";
 @import "bootstrap/scss/_reboot";
+@import "bootstrap/scss/_type";
 @import "bootstrap/scss/_tables";
 @import "bootstrap/scss/_buttons";
 @import "bootstrap/scss/_forms";
