feat(styles): add $app-font-color-secondary

--- a/src/lib/scss/styles.variables.scss
+++ b/src/lib/scss/styles.variables.scss
@@ -27,6 +27,7 @@ $input-btn-font-size: 1rem;
 $app-input-min-height: 37px;
 $app-btn-border-color: #dbdbdb;
 $app-soft-bg: #f9f9f9;
+$app-font-color-secondary: #5c5c5c;
 
 // ---------------------------------------------------------- //
 // 3. Include remainder of required Bootstrap stylesheets
